Fix path env var

--- a/cli/vagrant/Vagrantfile
+++ b/cli/vagrant/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "./playbook.yaml"
     ansible.host_vars = {
-      "ansible_python_interpreter" => "/usr/libexec/platform-python"
+      "ansible_python_interpreter" => "/usr/bin/python3"
     }
   end
 
